# divvy-onboarding-ux

./: .editorconfig  .gitignore  .pylintrc  Dockerfile  README.md  divvy_onboarding_ux.py  elm.json  package-lock.json  package.json  pyproject.toml  renovate.json
.github/workflows/: build.yml  deactivate-test.yml  deploy.yml
.nomad/: divvy-onboarding-ux.nomad
.nomad/conf/: .env.tpl  nginx.conf
.nomad/scripts/: prestart.sh  web.sh
elm/: Main.elm
js/: autocomplete.js  entrypoint.js  ports.js
static/: app.js
templates/: email.txt  form.html  ineligible.html  layout.html  provisioned.html  submitted.html
