[tool.poetry]
name = "divvy-onboarding-ux"
version = "0"
description = "Overengineered web form to facilitate onboarding users to Divvy"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.0.0"
Authlib = "1.2.1"
requests = "2.31.0"
ldap3 = "2.9.1"
uwsgi = "2.0.22"
sentry-sdk = {extras = ["pure-eval", "flask"], version = "1.32.0"}

[tool.poetry.group.dev.dependencies]
black = "23.10.1"
flake8 = "6.1.0"
flake8-black = "0.3.6"
flake8-bugbear = "23.9.16"
flake8-import-order = "0.18.2"
flake8-json = "23.7.0"
mypy = "1.6.1"
pylint = "3.0.2"
types-requests = "^2.28.11.7"
types-ldap3 = "^2.9.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
