[tool.poetry]
name = "divvy-onboarding-ux"
version = "0"
description = "Overengineered web form to facilitate onboarding users to Divvy"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.1.0"
Authlib = "1.5.2"
requests = "2.32.3"
uwsgi = "2.0.28"
sentry-sdk = {extras = ["pure-eval", "flask"], version = "2.20.0"}
google-auth = "2.38.0"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
flake8 = "7.2.0"
flake8-black = "0.3.6"
flake8-bugbear = "24.12.12"
flake8-import-order = "0.18.2"
mypy = "1.15.0"
pylint = "3.3.6"
types-requests = "^2.28.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
